fixed contact details, missing navbar fix

--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
                         </div>
                     </div>
                 </div>
-                <h3>Education</h3>
                 <div class="row">
                     <div class="col-12 col-lg-6">
+                        <h3>Education</h3>
                         <div class="card education">
                             <small class="dates">November 2020 - Present</small>
                             <h4>Full Stack Web Development and Computer Science Fundamentals</h4>
@@ -262,41 +262,41 @@
         <section id="Contact">
             <h2>Contact</h2>
             <div class="container">
-                <h3 class="mb">Get In Touch</h3>
                 <div class="row">
-                    <div class="col-12 col-lg-6">
-                        <form action="" class="contact-container">
-                            <label for="name"></label>
-                            <input type="text" id="name" placeholder="Your Name" class="form-line">
-                            <label for="email"></label>
-                            <input type="email" id="email" placeholder="Your Email" class="form-line">
-                            <label for="phone"></label>
-                            <input type="tel" id="phone" placeholder="Your Phone Number" class="form-line">
-                            <label for="message"></label>
-                            <textarea name="" id="message" cols="30" rows="10" placeholder="Write a message" class="form-line"></textarea>
-                            <input type="submit" value="SEND MESSAGE" class="button mt mb">
-                        </form>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-6 col-lg-4">
-                        <h3>My Contact Details</h3>
-                        <div class="contact-details">
-                            <small>EMAIL</small>
-                            <p>candrepa1@gmail.com</p>
-                            <small>PHONE</small>
-                            <p class="pb">+57 3147961792</p>
+                    <div class="col-12">
+                        <h3 class="mb">Get In Touch</h3>
+                        <div class="row">
+                            <div class="col-12 col-lg-7">
+                                <form action="" class="contact-container">
+                                    <label for="name"></label>
+                                    <input type="text" id="name" placeholder="Your Name" class="form-line">
+                                    <label for="email"></label>
+                                    <input type="email" id="email" placeholder="Your Email" class="form-line">
+                                    <label for="phone"></label>
+                                    <input type="tel" id="phone" placeholder="Your Phone Number" class="form-line">
+                                    <label for="message"></label>
+                                    <textarea name="" id="message" cols="30" rows="10" placeholder="Write a message" class="form-line"></textarea>
+                                    <input type="submit" value="SEND MESSAGE" class="button mt mb">
+                                </form>
+                            </div>
+                            <div class="col-6 col-lg-3">
+                                <h3>My Contact Details</h3>
+                                <div class="contact-details">
+                                    <small>EMAIL</small>
+                                    <p>candrepa1@gmail.com</p>
+                                    <small>PHONE</small>
+                                    <p class="pb">+57 3147961792</p>
+                                </div>
+                            </div>
+                            <div class="col-6 col-lg-2">
+                                <div class="icons-container">
+                                    <a href="https://www.linkedin.com/in/candrepa1/" target="_blank"><i class="fab fa-linkedin-in fa-4x icon"></i></a>
+                                    <a href="https://github.com/candrepa1" target="_blank"><i class="fab fa-github fa-4x icon"></i></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-6 col-lg-2">
-                        <div class="icons-container">
-                            <a href="https://www.linkedin.com/in/candrepa1/" target="_blank"><i class="fab fa-linkedin-in fa-4x icon"></i></a>
-                            <a href="https://github.com/candrepa1" target="_blank"><i class="fab fa-github fa-4x icon"></i></a>
-                        </div>
-                    </div>
                 </div>
-            </div>
-        </section>
         <!-- /Contact -->
 
     </main>
