after netlify mess

--- a/index.html
+++ b/index.html
@@ -115,15 +115,19 @@
         <section id="Resume">
             <h2>Resume</h2>
             <div class="container">
-                <picture class="img-container">
-                    <img src="./0.jpeg" alt="Camila's picture">
-                </picture>
-                <h3>About Me</h3>
-                <p class="paragraph mb">Frontend Developer from Sogamoso, Colombia. I'm currently looking for a job opportunity to apply my skills and learn further.</p>
-                <p class="paragraph mb">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit totam nam, at obcaecati quae ratione neque eveniet animi! Facilis facere quia assumenda exercitationem cum pariatur soluta alias excepturi similique odit.</p>
-                <a href="./CV_CamilaParadaValderrama.pdf" target="_blank" class="cv-button">DOWNLOAD CV</a>
                 <div class="row">
-                    <div class="col-12 col-md-6 flex-center">
+                    <div class="col-12">
+                        <picture class="img-container">
+                            <img src="./0.jpeg" alt="Camila's picture">
+                        </picture>
+                        <h3>About Me</h3>
+                        <p class="paragraph mb">Frontend Developer from Sogamoso, Colombia. I'm currently looking for a job opportunity to apply my skills and learn further.</p>
+                        <p class="paragraph mb">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit totam nam, at obcaecati quae ratione neque eveniet animi! Facilis facere quia assumenda exercitationem cum pariatur soluta alias excepturi similique odit.</p>
+                        <a href="./CV_CamilaParadaValderrama.pdf" target="_blank" class="cv-button">DOWNLOAD CV</a>
+                    </div>
+                </div>
+                <div class="skills-container">
+                    <div class="coding-container">
                         <h3 class="mb mt">Coding Skills</h3>
                         <div class="html">
                             <p>HTML</p>
@@ -136,7 +140,7 @@
                             </ul>
                         </div>
                         <div class="css">
-                            <p class="mt">CSS</p>
+                            <p class="mt-extra">CSS</p>
                             <ul class="dot-levels">
                                 <li><div class="dot"></div></li>
                                 <li><div class="dot"></div></li>
@@ -146,7 +150,7 @@
                             </ul>
                         </div>
                         <div class="python">
-                            <p class="mt">Python</p>
+                            <p class="mt-extra">Python</p>
                             <ul class="dot-levels">
                                 <li><div class="dot"></div></li>
                                 <li><div class="dot"></div></li>
@@ -156,7 +160,7 @@
                             </ul>
                         </div>
                         <div class="git">
-                            <p class="mt">Git</p>
+                            <p class="mt-extra">Git</p>
                             <ul class="dot-levels">
                                 <li><div class="dot"></div></li>
                                 <li><div class="dot"></div></li>
@@ -166,7 +170,7 @@
                             </ul>
                         </div>
                         <div class="sql">
-                            <p class="mt">SQL</p>
+                            <p class="mt-extra">SQL</p>
                             <ul class="dot-levels">
                                 <li><div class="dot"></div></li>
                                 <li><div class="dot"></div></li>
@@ -176,7 +180,7 @@
                             </ul>
                         </div>
                         <div class="javascript">
-                            <p class="mt">JavaScript</p>
+                            <p class="mt-extra">JavaScript</p>
                             <ul class="dot-levels">
                                 <li><div class="dot"></div></li>
                                 <li><div class="dot"></div></li>
@@ -186,8 +190,8 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 flex-center">
-                        <h3 class="mt mb">Language Skills</h3>
+                    <div class="languages-container">
+                        <h3 class="mt-extra mb">Language Skills</h3>
                         <div class="english">
                             <p>English</p>
                             <ul class="dot-levels">
@@ -199,7 +203,7 @@
                             </ul>
                         </div>
                         <div class="spanish">
-                            <p class="mt">Spanish</p>
+                            <p class="mt-extra">Spanish</p>
                             <ul class="dot-levels">
                                 <li><div class="dot"></div></li>
                                 <li><div class="dot"></div></li>
@@ -209,7 +213,7 @@
                             </ul>
                         </div>
                         <div class="italian">
-                            <p class="mt">Italian</p>
+                            <p class="mt-extra">Italian</p>
                             <ul class="dot-levels">
                                 <li><div class="dot"></div></li>
                                 <li><div class="dot"></div></li>
@@ -220,7 +224,9 @@
                         </div>
                     </div>
                 </div>
-                <h3>Education</h3>
+            </div>
+            <div class="container">
+                <h3 class="mt-extra">Education</h3>
                 <div class="row">
                     <div class="col-12 col-lg-6">
                         <div class="card education">
